Fixed issue #1 Fixed issue with too much padding on inline code Fixed issue with overlapping text area on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,20 @@
 
 body {
   font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
-  font-size: 13px;
+  font-size: 12px;
   color: #333;
 }
 
 /* LEFT SIDE: EDITOR */
 #editor {
-  width:600px;
+  width:580px;
   position:fixed;
   left:20px;
   top:20px;
+}
+
+textarea {
+  width:580px;
 }
 
 #tools {
@@ -35,7 +39,7 @@ body {
 /* RIGHT SIDE: PREVIEW */
 #preview {
   min-height:450px;
-  width:500px;
+  width:600px;
   padding: 20px;
   border-left:1px solid #999;
   position:relative;
@@ -46,14 +50,10 @@ body {
 
 /* CONTENT STYLING */
 #preview p, dt, dd {
-font-size: 1.0em;
-line-height: 1.5em;
-}
-
-#preview p {
+font-size: 12px;
+line-height: 15px;
 text-align: justify;
-margin-top: 1.5em;
-margin-bottom: 1.5em;
+margin-bottom:10px;
 }
 
 #preview pre, blockquote {
@@ -62,43 +62,35 @@ margin-bottom: 1.714em;
 }
 
 #preview h1 {
-font-size: 2.25em;
-line-height: 1.333em;
-margin-top: 0.22em;
-margin-bottom: 0.5em;
+font-size: 24px;
+line-height: 30px;
+margin-top: 20px;
+margin-bottom: 15px;
 }
 
 #preview h2 {
-font-size: 1.5em;
-line-height: 1.0em;
-margin-top: 1.5em;
-margin-bottom: 0.5em;
+font-size: 20px;
+line-height: 24px;
+margin-top: 14px;
+margin-bottom: 10px;
 }
 
 #preview h3 {
-font-size: 1.125em;
-line-height: 1.333em;
-margin-top: 1.333em;
-margin-bottom: 0;
+font-size: 14px;
+line-height: 18px;
+margin-top: 10px;
+margin-bottom: 8px;
 }
 
 #preview h4 {
-font-size: 1.0em;
-line-height: 1.5em;
-margin-top: 1.5em;
-margin-bottom: 0;
-}
-
-#preview h1 + h2 {
-margin-top: -1.6em;
+font-size: 12px;
+line-height: 14px;
+margin-top: 10px;
+margin-bottom: 8px;
 }
 
 #preview hr {
 margin-top: 1.6em;
-}
-
-#preview hr + h2 {
-margin-top: 0.5em;
 }
 
 #preview input {
@@ -108,9 +100,9 @@ font-size: 1.0em;
 #preview ul {
 list-style: square;
 }
+
 #preview li {
 padding-bottom:10px;
-line-height: 1.6em;
 }
 #preview a {
 color:#069;
@@ -144,7 +136,7 @@ text-decoration: underline;
 }
 
 /* HAX: Disable all borders from prettify */
-#preview * {
+#preview pre *, #preview code {
   border:none !important;
 }
 
